--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "eslint-config-funkmonkey",
-  "version": "2.2.0",
+  "version": "2.3.0",
   "description": "",
   "keywords": [],
   "author": "AndSelm <and.selm@gmail.com>",
@@ -15,6 +15,7 @@
   },
   "main": "index.js",
   "dependencies": {
-    "eslint-config-airbnb-typescript": "7.0.0"
+    "eslint-config-airbnb-typescript": "7.0.0",
+    "eslint-plugin-modules-newline": "0.0.1"
   }
 }
